--- a/tpWinformGroup9/frmPrincipal.resx
+++ b/tpWinformGroup9/frmPrincipal.resx
@@ -130,10 +130,20 @@
         ODkBNq19Zmt4m15A9s5SPQuJCqqoo9Z+LiOqRav0DU4cYQG/ugFCAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="btnReestablecer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DgAACw4BQL7hQQAAAPdJREFUOE+l0T1OQlEQxfHXETZAyR7UAGpcBxUJG2IZNizABohGo5aGVSBhDcDz
+        P4Yhw/2YexOKX0HOPYdMXtO2bdOfTcfY4gXy2/KyiA6u0Z4sJTC8LKKDT9CSeIU+8rKIDopH2OIbarIL
+        dlDcwxbtiV52Fg6Kq85PDYoH5Ipelh0U4YkrFDNvUKRO7CCblQZFH7/Q4jOyWc1gDxtoaY5sVhoc4Agt
+        fKGLbOYN3kIfiw8Us9zgHfbQwidqsuTgEAekCl72Lxy8gT4W9kwvO7ODcor992/UZBd0cAT7xewpXhbR
+        wR9o4V0Cw8siOjjBDgsNDC8LTJs/q+FYtTF7sOsAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="buttonBuscarFiltro.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAPdJREFUOE+l0T1OQlEQxfHXETZAyR7UAGpcBxUJG2IZNizABohGo5aGVSBhDcDz
+        DwAACw8BkvkDpQAAAPdJREFUOE+l0T1OQlEQxfHXETZAyR7UAGpcBxUJG2IZNizABohGo5aGVSBhDcDz
         P4Yhw/2YexOKX0HOPYdMXtO2bdOfTcfY4gXy2/KyiA6u0Z4sJTC8LKKDT9CSeIU+8rKIDopH2OIbarIL
         dlDcwxbtiV52Fg6Kq85PDYoH5Ipelh0U4YkrFDNvUKRO7CCblQZFH7/Q4jOyWc1gDxtoaY5sVhoc4Agt
         fKGLbOYN3kIfiw8Us9zgHfbQwidqsuTgEAekCl72Lxy8gT4W9kwvO7ODcor992/UZBd0cAT7xewpXhbR
@@ -143,7 +153,7 @@
   <data name="siguienteImgButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAPdJREFUOE+l0T1OQlEQxfHXETZAyR7UAGpcBxUJG2IZNizABohGo5aGVSBhDcDz
+        DwAACw8BkvkDpQAAAPdJREFUOE+l0T1OQlEQxfHXETZAyR7UAGpcBxUJG2IZNizABohGo5aGVSBhDcDz
         P4Yhw/2YexOKX0HOPYdMXtO2bdOfTcfY4gXy2/KyiA6u0Z4sJTC8LKKDT9CSeIU+8rKIDopH2OIbarIL
         dlDcwxbtiV52Fg6Kq85PDYoH5Ipelh0U4YkrFDNvUKRO7CCblQZFH7/Q4jOyWc1gDxtoaY5sVhoc4Agt
         fKGLbOYN3kIfiw8Us9zgHfbQwidqsuTgEAekCl72Lxy8gT4W9kwvO7ODcor992/UZBd0cAT7xewpXhbR
